@@ -1,3 +1,9 @@
+2003-10-30  Paul Eggert  <eggert@twinsun.com>
+            Bruno Haible  <bruno@clisp.org>
+
+	* vasprintf.c: Include <limits.h>, <stdlib.h>.
+	(vasprintf): Fail if the resulting length doesn't fit in an 'int'.
+
 2003-10-29  Paul Eggert  <eggert@twinsun.com>
 
 	* xalloc.h (xalloc_oversized): Now a macro, not a function,
